--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
+alembic==1.3.2
 Click==7.0
+DateTime==4.3
 Flask==1.1.1
-gunicorn==20.0.4
+Flask-Migrate==2.5.2
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.1
 itsdangerous==1.1.0
 Jinja2==2.10.3
+Mako==1.1.0
 MarkupSafe==1.1.1
 psycopg2==2.8.4
-SQLAlchemy==1.3.11
+python-dateutil==2.8.1
+python-dotenv==0.10.3
+python-editor==1.0.4
+pytz==2019.3
+six==1.13.0
+SQLAlchemy==1.3.12
 Werkzeug==0.16.0
+zope.interface==4.7.1
