--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Flask==1.1.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.1
+gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
