--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
 alembic==1.3.2
+Babel==2.8.0
+blinker==1.4
 Click==7.0
 DateTime==4.3
 Flask==1.1.1
+Flask-Admin==1.5.4
+Flask-BabelEx==0.9.3
+Flask-BasicAuth==0.2.0
+Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
+Flask-Principal==0.4.0
 Flask-Script==2.0.6
+Flask-Security==3.0.0
 Flask-SQLAlchemy==2.4.1
+Flask-WTF==0.14.2
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.10.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+passlib==1.7.2
 psycopg2==2.8.4
 python-dateutil==2.8.1
 python-dotenv==0.10.3
 python-editor==1.0.4
 pytz==2019.3
 six==1.13.0
+speaklater==1.3
 SQLAlchemy==1.3.12
 Werkzeug==0.16.0
+WTForms==2.2.1
 zope.interface==4.7.1
