--- a/package.json
+++ b/package.json
@@ -62,15 +62,17 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.13.0",
     "@loadable/component": "^5.12.0",
+    "antd": "^4.3.5",
     "aos": "^2.3.4",
     "bootstrap-css-only": "^4.4.1",
     "cloudinary-react": "^1.5.0",
     "dateformat": "^3.0.3",
-    "mdbreact": "^4.26.0",
+    "mdbreact": "^4.27.0",
     "npm": "^6.14.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
+    "react-jsx-parser": "^1.25.1",
     "react-router-dom": "^5.1.2"
   }
 }
