--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-dom": "^16.13.1",
     "react-helmet": "^6.0.0",
     "react-jsx-parser": "^1.25.1",
+    "react-lorem-ipsum": "^1.4.4",
     "react-router-dom": "^5.1.2"
   }
 }
