--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,29 @@
 asgiref==3.2.10
+backcall==0.2.0
+colorama==0.4.3
+decorator==4.4.2
 dj-database-url==0.5.0
 Django==3.0.7
+django-filter==2.3.0
 django-heroku==0.3.1
 django-webpack-loader==0.7.0
+djangorestframework==3.11.0
 gunicorn==20.0.4
+ipython==7.15.0
+ipython-genutils==0.2.0
+jedi==0.17.1
 Jinja2==2.11.2
 MarkupSafe==1.1.1
+parso==0.7.0
+pickleshare==0.7.5
+prompt-toolkit==3.0.5
 psycopg2==2.8.5
+Pygments==2.6.1
+python-dateutil==2.8.1
 python-dotenv==0.13.0
 pytz==2020.1
+six==1.15.0
 sqlparse==0.3.1
+traitlets==4.3.3
+wcwidth==0.2.5
 whitenoise==5.1.0
